--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <main>
       <section class="index-banner">
         <div class="vertical-center">
-          <h2>I AM <br>GAME PROGRAMMER </h2>
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam expedita officia quod esse doloremque architecto quaerat reiciendis voluptatum error animi rerum quibusdam quidem, quis, voluptatem eos minus blanditiis modi autem!</h1>
+          <h2>I AM <br>UNITY PROGRAMMER </h2>
+          <h1>2 years of experience in Unity, C# and UI scripting</h1>
         </div>
         
       </section>
