Making PC adaptation
Giving sizes and starting change some lines of code

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <main>
       <section class="index-banner">
         <div class="vertical-center">
-          <h2>I AM <br>UNITY PROGRAMMER </h2>
-          <h1>2 years of experience in Unity, C# and UI scripting</h1>
+          <h2>I AM A <br>UNITY PROGRAMMER </h2>
+          <h1>3 years of experience in Unity, C# and UI scripting</h1>
         </div>
         
       </section>
@@ -41,23 +41,28 @@
         <a href="">
           <div class="index-boxlink-square">
           <h3>About</h3>
-        </div></a>
-        <a href="">
+          </div>
+        </a>
+        <a href="https://twitter.com/MoscosoMaxi">
           <div class="index-boxlink-rectangle">
           <h3>Portfolio</h3>
-        </div></a>
+          </div>
+        </a>
         <a href="">
           <div class="index-boxlink-square">
           <h3>Twitter</h3>
-        </div></a>
-        <a href="">
+          </div>
+        </a>
+        <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber">
           <div class="index-boxlink-rectangle">
           <h3>Youtube Channel</h3>
-        </div></a>
+          </div>
+        </a>
         <a href="">
           <div class="index-boxlink-square">
           <h3>Contact</h3>
-        </div></a>
+          </div>
+        </a>
         
       </section>
     </main>
@@ -77,9 +82,13 @@
         <li><a href="">DDD</a></li>
       </ul>
       <div class="footer-socialMedias">
-        <a href="">
+        <a href="https://twitter.com/MoscosoMaxi">
           <img src="img/twitter-icon.png" alt="Twitter Icon">
+        </a>
+        <a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber">
           <img src="img/youtube-icon.png" alt="Youtube Icon">
+        </a>
+        <a href="https://www.instagram.com/maxi_moscoso/?hl=es-la">
           <img src="img/instagram-icon.png" alt="Instagram Icon">
         </a>
       </div>
