--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<img src="images/portitem1.jpeg" alt="">
 				</div>
 				<div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
-					<h6>Web Development</h6>
-					<h1>Blog Website</h1>
+					<h6>GAME 1</h6>
+					<h1>game</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 					</p>
@@ -108,8 +108,8 @@
 
 			<div class="portfolio-item">
 				<div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="1000">
-					<h6>Web Design</h6>
-					<h1>Product Layout</h1>
+					<h6>GAME 2</h6>
+					<h1>game</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 					</p>
@@ -125,8 +125,8 @@
 					<img src="images/portitem3.jpeg" alt="">
 				</div>
 				<div class="portfolio-description" data-aos="fade-left" data-aos-delay="1400">
-					<h6>Web Design</h6>
-					<h1>Product Sketch</h1>
+					<h6>GAME 3</h6>
+					<h1>game</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 					</p>
@@ -147,7 +147,7 @@
 					<div class="icon-container">
 						<i class="fas fa-layer-group"></i>
 					</div>
-					<h1>Web Design</h1>
+					<h1>Something 1</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					</p>
@@ -157,7 +157,7 @@
 					<div class="icon-container">
 						<i class="fas fa-code"></i>
 					</div>
-					<h1>Web Development</h1>
+					<h1>Something 2</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					</p>
@@ -167,7 +167,7 @@
 					<div class="icon-container">
 						<i class="fas fa-chart-bar"></i>
 					</div>
-					<h1>Product Strategy</h1>
+					<h1>Something 3</h1>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 					</p>
