--- a/index.html
+++ b/index.html
@@ -63,18 +63,23 @@
 				<div class="social-media">
 					<ul class="nav-list">
 						<li>
-							<a href="#" class="icon-link">
+							<a href="https://www.youtube.com/channel/UCZKCL_YUKV4ComQ83yXDhvA?view_as=subscriber" class="icon-link">
 								<i class="fab fa-youtube"></i>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon-link">
+							<a href="https://twitter.com/MoscosoMaxi" class="icon-link">
 								<i class="fab fa-twitter"></i>
 							</a>
 						</li>
 						<li>
-							<a href="#" class="icon-link">
+							<a href="https://www.instagram.com/maxi_moscoso/?hl=es-la" class="icon-link">
 								<i class="fab fa-instagram"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://github.com/MoscosoMaximiliano" class="icon-link">
+								<i class="fab fa-github"></i>
 							</a>
 						</li>
 					</ul>
