--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 	<section class="about" id="about">
 		<div class="container">
-			<div class="profile-img" data-aos="fade-right" data-aos-delay="300">
+			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="300">
 				<img src="images/profile.jpeg" alt="">
 			</div>
-			<div class="about-details" data-aos="fade-left" data-aos-delay="600">
+			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="600">
 				<div class="about-heading">
 					<h1>About</h1>
 					<h6>Myself</h6>
@@ -98,10 +98,10 @@
 				<h6>View some of my recent work</h6>
 			</div>
 			<div class="portfolio-item" >
-				<div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="300">
+				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="300">
 					<img src="images/portitem1.jpeg" alt="">
 				</div>
-				<div class="portfolio-description" data-aos="fade-left" data-aos-delay="600">
+				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="600">
 					<h6>GAME 1</h6>
 					<h1>game</h1>
 					<p>
@@ -112,7 +112,7 @@
 			</div>
 
 			<div class="portfolio-item">
-				<div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="1000">
+				<div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="1000">
 					<h6>GAME 2</h6>
 					<h1>game</h1>
 					<p>
@@ -120,16 +120,16 @@
 					</p>
 					<a href="#" class="cta">View Details</a>
 				</div>
-				<div class="portfolio-img" data-aos="fade-left" data-aos-delay="700">
+				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="700">
 					<img src="images/portitem2.jpeg" alt="">
 				</div>
 			</div>
 
 			<div class="portfolio-item">
-				<div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1100">
+				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="1100">
 					<img src="images/portitem3.jpeg" alt="">
 				</div>
-				<div class="portfolio-description" data-aos="fade-left" data-aos-delay="1400">
+				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="1400">
 					<h6>GAME 3</h6>
 					<h1>game</h1>
 					<p>
@@ -148,7 +148,7 @@
 				<h6>What i can do for you</h6>
 			</div>
 			<div class="my-skills">
-				<div class="skill" data-aos="fade" data-aos-delay="300">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
 					<div class="icon-container">
 						<i class="fas fa-layer-group"></i>
 					</div>
@@ -158,7 +158,7 @@
 					</p>
 				</div>
 
-				<div class="skill" data-aos="fade" data-aos-delay="600">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="600">
 					<div class="icon-container">
 						<i class="fas fa-code"></i>
 					</div>
@@ -168,7 +168,7 @@
 					</p>
 				</div>
 
-				<div class="skill" data-aos="fade" data-aos-delay="900">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="900">
 					<div class="icon-container">
 						<i class="fas fa-chart-bar"></i>
 					</div>
@@ -189,21 +189,21 @@
 			</div>
 			<div class="timeline">
 				<ul>
-					<li class="date" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="300">
+					<li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="300">
 						<h1>Google</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
 						</p>
 					</li>
 
-					<li class="date" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
+					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
 						<h1>Google2</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
 						</p>
 					</li>
 
-					<li class="date" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="900">
+					<li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="900">
 						<h1>Google3</h1>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
@@ -220,7 +220,7 @@
 				<h1>Contact</h1>
 				<h6>Let's work together</h6>
 			</div>
-			<form action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
+			<form class="wrap" action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
 				<label for="name">Name:</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
