--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div class="landing-text">
 			<h1>Moscoso Maximiliano</h1>
-			<h6>Unity C# | Shaders | Game Design</h6>
+			<h6>Unity Programmer | Game Design</h6>
 		</div>
 	</header>
 
@@ -58,7 +58,7 @@
 					<h6>Myself</h6>
 				</div>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut nobis dicta fugiat unde. Nulla excepturi tenetur deserunt molestiae cumque. Placeat aut labore, libero minima quas consequuntur ab mollitia. Libero, ea.
+					Soy de Río Grande Tierra del Fuego, Argentina, tengo 23 años y me encuentro estudiando Desarrollo de Software.
 				</p>
 				<div class="social-media">
 					<ul class="nav-list">
@@ -99,43 +99,43 @@
 			</div>
 			<div class="portfolio-item" >
 				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="300">
-					<img src="images/portitem1.jpeg" alt="">
+					<img src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
 				</div>
 				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="600">
-					<h6>GAME 1</h6>
-					<h1>game</h1>
+					<h6>itch.io</h6>
+					<h1>Cardboard Words</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Hecho en la Weekly Game Jam
 					</p>
-					<a href="#" class="cta">View Details</a>
+					<a href="https://nyxas.itch.io/cardboard-words" class="cta">Play Game</a>
 				</div>
 			</div>
 
 			<div class="portfolio-item">
 				<div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="1000">
-					<h6>GAME 2</h6>
-					<h1>game</h1>
+					<h6>itch.io</h6>
+					<h1>A Seed Thousand Lives</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Hecho en la Weekly Game Jam
 					</p>
-					<a href="#" class="cta">View Details</a>
+					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">View Details</a>
 				</div>
 				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="700">
-					<img src="images/portitem2.jpeg" alt="">
+					<img src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
 				</div>
 			</div>
 
 			<div class="portfolio-item">
 				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="1100">
-					<img src="images/portitem3.jpeg" alt="">
+					<img src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
 				</div>
 				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="1400">
-					<h6>GAME 3</h6>
-					<h1>game</h1>
+					<h6>Global Game Jam</h6>
+					<h1>The Place Where We Used</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Hecho durante la Global Game Jam 2019
 					</p>
-					<a href="#" class="cta">View Details</a>
+					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">View Details</a>
 				</div>
 			</div>
 		</div>
@@ -144,17 +144,17 @@
 	<section class="services" id="services">
 		<div class="container">
 			<div class="section-heading">
-				<h1>Services</h1>
-				<h6>What i can do for you</h6>
+				<h1>Aptitudes</h1>
+				<h6>¿Qué es lo que se hacer?</h6>
 			</div>
 			<div class="my-skills">
 				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
 					<div class="icon-container">
 						<i class="fas fa-layer-group"></i>
 					</div>
-					<h1>Something 1</h1>
+					<h1>Eficacia</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Mantengo en ordén las tareas dadas y las cumplo en tiempo y forma buscando la mejor calidad posible. 
 					</p>
 				</div>
 
@@ -162,9 +162,9 @@
 					<div class="icon-container">
 						<i class="fas fa-code"></i>
 					</div>
-					<h1>Something 2</h1>
+					<h1>Trabajo en equipo</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Me comunico con mis compañeros para encontrar el mejor flujo de trabajo. 
 					</p>
 				</div>
 
@@ -190,23 +190,30 @@
 			<div class="timeline">
 				<ul>
 					<li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="300">
-						<h1>Google</h1>
+						<h1>-</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
+							-
 						</p>
 					</li>
 
 					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
-						<h1>Google2</h1>
+						<h1>Espacio de desarrollo tecnologico y laboral - ELDT TDF</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
+							Programador generalista en el desarrollo del videojuego Base Chat
+						</p>
+					</li>
+
+					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
+						<h1>Puerto Global</h1>
+						<p>
+							Programador generalista en los distintos proyectos dados
 						</p>
 					</li>
 
 					<li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="900">
-						<h1>Google3</h1>
+						<h1>-</h1>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaqu
+							-
 						</p>
 					</li>
 				</ul>
@@ -234,9 +241,9 @@
 					<option value="">All</option>
 				</select> -->
 				
-				<label for="subject">Subject:</label>
-				<textarea name="subject" id="subject" cols="10" rows="10"></textarea>
-				<input type="submit" value="Submit">
+				<label for="subject">Message:</label>
+				<textarea name="message" id="message" cols="10" rows="10"></textarea>
+				<input type="submit" name="submit" value="Submit">
 			</form>
 		</div>
 	</section>
