--- a/index.html
+++ b/index.html
@@ -227,24 +227,29 @@
 				<h1>Contact</h1>
 				<h6>Let's work together</h6>
 			</div>
-			<form class="wrap" action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
+			<!-- <form class="wrap" action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
 				<label for="name">Name:</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
 				<label for="email">Email:</label>
 				<input type="email" id="email" name="email" placeholder="Enter your email" requiered>
 
-				<!-- <label for="service">Services:</label>
+				<label for="service">Services:</label>
 				<select name="service" id="service">
 					<option value="">Web Design</option>
 					<option value="">Web Development</option>
 					<option value="">All</option>
-				</select> -->
+				</select>
 				
 				<label for="subject">Message:</label>
 				<textarea name="message" id="message" cols="10" rows="10"></textarea>
 				<input type="submit" name="submit" value="Submit">
-			</form>
+			</form> -->
+			<div class="box-email">
+				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="300">moscosomaximiliano@gmail.com</h1>
+			</div>
+			
+
 		</div>
 	</section>
 
