--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <!-- Optional Font -->
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Kalam&display=swap" rel="stylesheet">
+
+
+
     <link rel="stylesheet" href="main.css">
 
 </head>
@@ -58,7 +63,7 @@
 					<h6>Myself</h6>
 				</div>
 				<p>
-					Soy de Río Grande Tierra del Fuego, Argentina, tengo 23 años y me encuentro estudiando Desarrollo de Software.
+					Soy de Río Grande Tierra del Fuego, Argentina, tengo 23 años y me encuentro estudiando Desarrollo de Software. 3 años de experiencia con Unity y 5 en programación.
 				</p>
 				<div class="social-media">
 					<ul class="nav-list">
@@ -150,7 +155,7 @@
 			<div class="my-skills">
 				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
 					<div class="icon-container">
-						<i class="fas fa-layer-group"></i>
+						<i class="fas fa-code"></i>
 					</div>
 					<h1>Eficacia</h1>
 					<p>
@@ -160,7 +165,7 @@
 
 				<div class="skill wrap" data-aos="fade" data-aos-delay="600">
 					<div class="icon-container">
-						<i class="fas fa-code"></i>
+						<i class="fas fa-chart-bar"></i>
 					</div>
 					<h1>Trabajo en equipo</h1>
 					<p>
@@ -170,11 +175,11 @@
 
 				<div class="skill wrap" data-aos="fade" data-aos-delay="900">
 					<div class="icon-container">
-						<i class="fas fa-chart-bar"></i>
+						<i class="fas fa-code"></i>
 					</div>
-					<h1>Something 3</h1>
+					<h1>Predisposición</h1>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+						Busco aprender nuevas cosas constantemente, estar actualizado y mejorar en todos los ambitos.
 					</p>
 				</div>
 			</div>
