delay animation changed

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 
 	<section class="about" id="about">
 		<div class="container">
-			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="300">
+			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="150">
 				<img src="images/profile.jpeg" alt="">
 			</div>
-			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="600">
+			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="300">
 				<div class="about-heading">
 					<h1>About</h1>
 					<h6>Myself</h6>
 				</div>
 				<p>
-					Soy de Río Grande Tierra del Fuego, Argentina, tengo 23 años y me encuentro estudiando Desarrollo de Software. 3 años de experiencia con Unity y 5 en programación.
+					Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 5 en programación.
 				</p>
 				<div class="social-media">
 					<ul class="nav-list">
@@ -103,10 +103,10 @@
 				<h6>View some of my recent work</h6>
 			</div>
 			<div class="portfolio-item" >
-				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="300">
+				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
 					<img src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
 				</div>
-				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="600">
+				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
 					<h6>itch.io</h6>
 					<h1>Cardboard Words</h1>
 					<p>
@@ -117,30 +117,30 @@
 			</div>
 
 			<div class="portfolio-item">
-				<div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="1000">
+				<div class="portfolio-description has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
 					<h6>itch.io</h6>
 					<h1>A Seed Thousand Lives</h1>
 					<p>
 						Hecho en la Weekly Game Jam
 					</p>
-					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">View Details</a>
+					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Play Now</a>
 				</div>
-				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="700">
+				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
 					<img src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
 				</div>
 			</div>
 
 			<div class="portfolio-item">
-				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="1100">
+				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
 					<img src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
 				</div>
-				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="1400">
+				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
 					<h6>Global Game Jam</h6>
 					<h1>The Place Where We Used</h1>
 					<p>
 						Hecho durante la Global Game Jam 2019
 					</p>
-					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">View Details</a>
+					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Play Now</a>
 				</div>
 			</div>
 		</div>
@@ -153,33 +153,33 @@
 				<h6>¿Qué es lo que se hacer?</h6>
 			</div>
 			<div class="my-skills">
-				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="150">
 					<div class="icon-container">
 						<i class="fas fa-code"></i>
 					</div>
 					<h1>Eficacia</h1>
 					<p>
-						Mantengo en ordén las tareas dadas y las cumplo en tiempo y forma buscando la mejor calidad posible. 
+						Orden en las tareas, cumpliendo en tiempo y forma, orientado a la calidad.
 					</p>
 				</div>
 
-				<div class="skill wrap" data-aos="fade" data-aos-delay="600">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="300">
 					<div class="icon-container">
 						<i class="fas fa-chart-bar"></i>
 					</div>
 					<h1>Trabajo en equipo</h1>
 					<p>
-						Me comunico con mis compañeros para encontrar el mejor flujo de trabajo. 
+						Comunicación con el equipo para un mejor flujo de trabajo. 
 					</p>
 				</div>
 
-				<div class="skill wrap" data-aos="fade" data-aos-delay="900">
+				<div class="skill wrap" data-aos="fade" data-aos-delay="450">
 					<div class="icon-container">
 						<i class="fas fa-code"></i>
 					</div>
 					<h1>Predisposición</h1>
 					<p>
-						Busco aprender nuevas cosas constantemente, estar actualizado y mejorar en todos los ambitos.
+						Busqueda de aprendizaje, actualización y mejora constante en todos los ambitos.
 					</p>
 				</div>
 			</div>
@@ -194,28 +194,28 @@
 			</div>
 			<div class="timeline">
 				<ul>
-					<li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="300">
+					<li class="date wrap" data-date="2020 - Present" data-aos="fade-down" data-aos-delay="150">
 						<h1>-</h1>
 						<p>
 							-
 						</p>
 					</li>
 
-					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
-						<h1>Espacio de desarrollo tecnologico y laboral - ELDT TDF</h1>
+					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="300">
+						<h1>Espacio de Desarrollo Tecnologico y Laboral - EDTL TDF</h1>
 						<p>
-							Programador generalista en el desarrollo del videojuego Base Chat
+							Programador generalista y Co - Level Designer en el desarrollo del videojuego "Base Chat"
 						</p>
 					</li>
 
-					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="600">
+					<li class="date wrap" data-date="2019 - 2020" data-aos="fade-left" data-aos-delay="450">
 						<h1>Puerto Global</h1>
 						<p>
-							Programador generalista en los distintos proyectos dados
+							Programador generalista de proyectos.
 						</p>
 					</li>
 
-					<li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="900">
+					<li class="date wrap" data-date="2018 - 2019" data-aos="fade-up" data-aos-delay="600">
 						<h1>-</h1>
 						<p>
 							-
@@ -251,7 +251,7 @@
 				<input type="submit" name="submit" value="Submit">
 			</form> -->
 			<div class="box-email">
-				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="300">moscosomaximiliano@gmail.com</h1>
+				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="150">moscosomaximiliano@gmail.com</h1>
 			</div>
 			
 
