--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 					<h6>itch.io</h6>
 					<h1>Cardboard Words</h1>
 					<p>
-						Hecho en la Weekly Game Jam
+						Hecho en la Ludum Dare
 					</p>
 					<a href="https://nyxas.itch.io/cardboard-words" class="cta">Play Game</a>
 				</div>
