--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <!-- Optional Font -->
-	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Kalam&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Montserrat:600&display=swap" rel="stylesheet">
 
 
 
@@ -47,7 +47,8 @@
 		</nav>
 
 		<div class="landing-text">
-			<h1>Moscoso Maximiliano</h1>
+			<h1>Moscoso </h1>
+			<h1>Maximiliano</h1>
 			<h6>Unity Programmer | Game Design</h6>
 		</div>
 	</header>
