Spanish version of CV

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			</div>
 			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="300">
 				<div class="about-heading">
-					<h1>About</h1>
-					<h6>Myself</h6>
+					<h1>Sobre</h1>
+					<h6>Mi</h6>
 				</div>
 				<p>
 					Nacido en Río Grande, Tierra del Fuego, Argentina. Tengo 23 años actualmente estudiando el terciario de Desarrollo de Software. 3 años de experiencia en Unity y 5 en programación.
@@ -101,7 +101,7 @@
 		<div class="container">
 			<div class="section-heading">
 				<h1>Portfolio</h1>
-				<h6>View some of my recent work</h6>
+				<h6>Algunos de mis recientes trabajos</h6>
 			</div>
 			<div class="portfolio-item" >
 				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
@@ -151,7 +151,7 @@
 		<div class="container">
 			<div class="section-heading">
 				<h1>Aptitudes</h1>
-				<h6>¿Qué es lo que se hacer?</h6>
+				<h6>¿En que destaco?</h6>
 			</div>
 			<div class="my-skills">
 				<div class="skill wrap" data-aos="fade" data-aos-delay="150">
@@ -190,8 +190,8 @@
 	<section class="experiences" id="experiences">
 		<div class="container">
 			<div class="section-heading">
-				<h1>Work Experiences</h1>
-				<h6>Past and current jobs</h6>
+				<h1>Experiencias de trabajo</h1>
+				<h6>Viejos y actuales trabajos</h6>
 			</div>
 			<div class="timeline">
 				<ul>
@@ -230,8 +230,8 @@
 	<section class="contact" id="contact">
 		<div class="container">
 			<div class="section-heading">
-				<h1>Contact</h1>
-				<h6>Let's work together</h6>
+				<h1>Contactame</h1>
+				<h6>Trabajemos juntos</h6>
 			</div>
 			<!-- <form class="wrap" action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
 				<label for="name">Name:</label>
