--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			</div>
 			<div class="portfolio-item" >
 				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-					<img src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
+					<img class="game-img" src="https://img.itch.zone/aW1nLzI1NjEwODEucG5n/347x500/N%2FVEWf.png" alt="">
 				</div>
 				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
 					<h6>itch.io</h6>
@@ -127,13 +127,13 @@
 					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Play Now</a>
 				</div>
 				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
-					<img src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
+					<img class="game-img" src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
 				</div>
 			</div>
 
 			<div class="portfolio-item">
 				<div class="portfolio-img has-margin-right wrap" data-aos="fade-right" data-aos-delay="150">
-					<img src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
+					<img class="game-img" src="https://ggj.s3.amazonaws.com/styles/game_sidebar__narrow/featured_image/2019/01/189728/menu0000.png?itok=LmlN9BIh&timestamp=1548610626" alt="">
 				</div>
 				<div class="portfolio-description wrap" data-aos="fade-left" data-aos-delay="300">
 					<h6>Global Game Jam</h6>
