--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<p>
 						Hecho en la Ludum Dare
 					</p>
-					<a href="https://nyxas.itch.io/cardboard-words" class="cta">Play Game</a>
+					<a href="https://nyxas.itch.io/cardboard-words" class="cta">Jugar</a>
 				</div>
 			</div>
 
@@ -124,7 +124,7 @@
 					<p>
 						Hecho en la Weekly Game Jam
 					</p>
-					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Play Now</a>
+					<a href="https://nyxas.itch.io/aseedthousandlives" class="cta">Jugar</a>
 				</div>
 				<div class="portfolio-img wrap" data-aos="fade-left" data-aos-delay="300">
 					<img class="game-img" src="https://img.itch.zone/aW1nLzI1MjM3MTQucG5n/original/8vR7YZ.png" alt="">
@@ -141,7 +141,7 @@
 					<p>
 						Hecho durante la Global Game Jam 2019
 					</p>
-					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Play Now</a>
+					<a href="https://globalgamejam.org/2019/games/place-where-we-used" class="cta">Jugar</a>
 				</div>
 			</div>
 		</div>
