--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<section class="about" id="about">
 		<div class="container">
 			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="150">
-				<img src="images/profile.jpeg" alt="">
+				<img class="profile-img" src="images/profile.jpeg" alt="">
 			</div>
 			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="300">
 				<div class="about-heading">
