menu text on hover

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			<div class="bar half start"></div>
 			<div class="bar"></div>
 			<div class="bar half end"></div>
+			<span>Menu</span>
 		</div>
 		<nav class="top-nav">
 			<ul class="nav-list">
@@ -55,10 +56,10 @@
 
 	<section class="about" id="about">
 		<div class="container">
-			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="150">
+			<div class="profile-img wrap" data-aos="fade-right" data-aos-delay="50">
 				<img class="profile-img" src="images/profile.jpeg" alt="">
 			</div>
-			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="300">
+			<div class="about-details wrap" data-aos="fade-left" data-aos-delay="50">
 				<div class="about-heading">
 					<h1>Sobre</h1>
 					<h6>Mi</h6>
