--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-	<header>
+	<header id="home">
 		<div class="menu-toggler">
 			<div class="bar half start"></div>
 			<div class="bar"></div>
@@ -27,7 +27,7 @@
 		<nav class="top-nav">
 			<ul class="nav-list">
 				<li>
-					<a href="index.html" class="nav-link">Home</a>
+					<a href="#home" class="nav-link">Home</a>
 				</li>
 				<li>
 					<a href="#about" class="nav-link">About</a>
@@ -47,7 +47,7 @@
 			</ul>
 		</nav>
 
-		<div class="landing-text">
+		<div class="landing-text" >
 			<h1>Moscoso </h1>
 			<h1>Maximiliano</h1>
 			<h6>Unity Programmer | Game Design</h6>
