Start using FormSpree

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</div>
 			</div>
 
-			
+
 		</div>
 	</section>
 
@@ -168,7 +168,7 @@
 					</div>
 					<h1>Trabajo en equipo</h1>
 					<p>
-						Comunicación con el equipo para un mejor flujo de trabajo. 
+						Comunicación con el equipo para un mejor flujo de trabajo.
 					</p>
 				</div>
 
@@ -231,27 +231,27 @@
 				<h1>Contactame</h1>
 				<h6>Trabajemos juntos</h6>
 			</div>
-			<!-- <form class="wrap" action="contact.php" method="post" data-aos="fade-up" data-aos-delay="300">
+			<form class="wrap" action="https://formspree.io/mdoewkzk" method="POST" data-aos="fade-up" data-aos-delay="300">
 				<label for="name">Name:</label>
 				<input type="text" id="name" name="name" placeholder="Enter your name" requiered>
 
 				<label for="email">Email:</label>
-				<input type="email" id="email" name="email" placeholder="Enter your email" requiered>
+				<input type="email" id="email" name="_replyto" placeholder="Enter your email" requiered>
 
-				<label for="service">Services:</label>
+				<!-- <label for="service">Services:</label>
 				<select name="service" id="service">
 					<option value="">Web Design</option>
 					<option value="">Web Development</option>
 					<option value="">All</option>
-				</select>
-				
+				</select> -->
+
 				<label for="subject">Message:</label>
 				<textarea name="message" id="message" cols="10" rows="10"></textarea>
-				<input type="submit" name="submit" value="Submit">
-			</form> -->
-			<div class="box-email">
+				<center><input type="submit" name="submit" value="Send"></center>
+			</form>
+			<!-- <div class="box-email">
 				<h1 class="text-email" data-aos="zoom-in" data-aos-delay="150">moscosomaximiliano@gmail.com</h1>
-			</div>
+			</div> -->
 		</div>
 	</section>
 
