Added Programming Skill Bar

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
 				<li>
 					<a href="#home" class="nav-link">Home</a>
 				</li>
-				<li>
+        <li>
 					<a href="#about" class="nav-link">About</a>
+				</li>
+        <li>
+					<a href="#languages" class="nav-link">Languages</a>
 				</li>
 				<li>
 					<a href="#portfolio" class="nav-link">Portfolio</a>
@@ -45,9 +48,9 @@
 		</nav>
 
 		<div class="landing-text" >
-			<h1>Moscoso </h1>
+			<h1>Moscoso</h1>
 			<h1>Maximiliano</h1>
-			<h6>Unity Programmer | Game Design</h6>
+			<h6>Unity Programmer | Game Design | Web Development</h6>
 		</div>
 	</header>
 
@@ -93,6 +96,23 @@
 
 		</div>
 	</section>
+
+  <section class="languages" id="languages">
+    <div class="container">
+      <div class="section-heading">
+        <h1>Conocimientos de programación</h1>
+        <h6>Mis años de uso de lenguaje de programación</h6>
+      </div>
+      <div class="languages-skills">
+        <li class="html">html             <center>2 Years</center></li>
+        <li class="css">css               <center>1 Year</center></li>
+        <li class="php">php               <center>1 Year</center></li>
+        <li class="js">js                 <center>1 Year</center></li>
+        <li class="csharp">c#             <center>4 Years</center></li>
+        <li class="python">python         <center>2 Years</center></li>
+      </div>
+    </div>
+  </section>
 
 
 	<section class="portfolio" id="portfolio">
